--- a/style.css
+++ b/style.css
@@ -92,6 +92,12 @@ h1{
     font-style: oblique;
 
 }
+.ss {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
 .head{
 
     background-image: url(https://media.istockphoto.com/id/678535734/photo/dark-background-table-top-copy-space.jpg?s=612x612&w=0&k=20&c=9x05KMGvpqp748jiYpveZWKFXa-TyeC94qf0_o9gCDk=);
@@ -121,10 +127,10 @@ h1{
     
 }
     .bon{
-        margin-left: 1380px;
+        margin-left: 1350px;
         display:flex;
         justify-content: space-between;
-        gap:15px;
+        gap:10px;
         color:white;
         
     }
@@ -134,17 +140,18 @@ h1{
 
     }
   
-#bon{
+#boni{
     margin: 0;
     padding:0;
-    text-decoration-color: white;
+    /*text-decoration-color: white;
     text-align: center;
       color:white;
     background-color: rgb(103, 101, 101);
         height:30px;
-        width:80px;
-        font-size: 16px;
+        width:80px;*/
+        font-size: 20px;
         font-style: italic;
+        color:black;
 
     
 }
